--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Kerry Guarino, Front end Developer"
+    />
+    <title>About me, Front end Developer | Kerry Guarino</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,13 +41,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me page"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="How to contact me"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -63,21 +81,21 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.png"
-            alt="yoga"
+            alt="yoga project"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
-            alt="weather"
+            alt="weather project"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.png"
-            alt="yogurt"
+            alt="yogurt project"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
@@ -85,7 +103,11 @@
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:kerry@myemail.com" class="email-link">
+      <a
+        href="mailto:kerry@myemail.com"
+        class="email-link"
+        title="email Kerry Guarino"
+      >
         kerry@myemail.com
       </a>
     </div>
