--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K. Guarino</title>
+    <meta
+      name="description"
+      content="Porfolio of Front end Developer with coding examples by Kerry Guarino"
+    />
+    <title>Porfolio with coding examples | Kerry Guarino</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,15 +41,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me page"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="How to contact me"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -56,13 +71,27 @@
     <h1>Kerry Guarino</h1>
     <h3>🗽 Front-end developer, based in America</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="How to contact Kerry Guarino"
+        >Contact me</a
+      >
+      <a
+        href="about.html"
+        class="about-link"
+        title="Learn more about Kerry Guarino"
+        >About me</a
+      >
     </div>
     <div class="container index-info">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" alt="yoga" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="yoga project"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2>Yoga app</h2>
@@ -73,7 +102,9 @@
             explicabo eum dolore.
           </p>
           <div class="app-links">
-            <a href="#" class="app-link">Launch Yoga App</a>
+            <a href="#" class="app-link" title="go to yoga app"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -87,20 +118,26 @@
             explicabo eum dolore.
           </p>
           <div class="app-links">
-            <a href="#" class="app-link">Launch Weather App</a>
+            <a href="#" class="app-link" title="go to weather app"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
           <img
             src="images/weather.png"
-            alt="weather"
+            alt="weather project"
             class="img-fluid rounded"
           />
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" alt="yogurt" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="yogurt project"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2>Yogurt app</h2>
@@ -111,7 +148,9 @@
             explicabo eum dolore.
           </p>
           <div class="app-links">
-            <a href="#" class="app-link">Launch Yogurt App</a>
+            <a href="#" class="app-link" title="go to yogurt app"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
