--- a/about.html
+++ b/about.html
@@ -20,13 +20,12 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>About K. Guarino</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-light fixed-top">
       <div class="container-fluid container-navbar">
-        <a class="navbar-brand" href="index.html">Kerry Guarino</a>
+        <a class="navbar-brand" href="/" title="homepage">Kerry Guarino</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,20 +43,20 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
+                href="/"
                 title="homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About me page"
+              <a class="nav-link" href="/about.html" title="About me page"
                 >About me</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html#contact"
+                href="/about.html#contact"
                 title="How to contact me"
                 >Contact</a
               >
@@ -80,21 +79,21 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="yoga project"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="weather project"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="yogurt project"
             class="img-fluid p-2 shadow rounded"
           />
