--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
     <nav class="navbar navbar-expand-md bg-light fixed-top">
       <div class="container-fluid container-navbar">
-        <a class="navbar-brand" href="index.html">Kerry Guarino</a>
+        <a class="navbar-brand" href="/" title="homepage">Kerry Guarino</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,20 +44,20 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
+                href="/"
                 title="homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About me page"
+              <a class="nav-link" href="/about.html" title="About me page"
                 >About me</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html#contact"
+                href="/about.html#contact"
                 title="How to contact me"
                 >Contact</a
               >
@@ -72,13 +72,13 @@
     <h3>🗽 Front-end developer, based in America</h3>
     <div class="navigation-links">
       <a
-        href="about.html#contact"
+        href="/about.html#contact"
         class="contact-link"
         title="How to contact Kerry Guarino"
         >Contact me</a
       >
       <a
-        href="about.html"
+        href="/about.html"
         class="about-link"
         title="Learn more about Kerry Guarino"
         >About me</a
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="yoga project"
             class="img-fluid rounded"
           />
@@ -125,7 +125,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="weather project"
             class="img-fluid rounded"
           />
@@ -134,7 +134,7 @@
       <div class="row">
         <div class="col-md-6">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="yogurt project"
             class="img-fluid rounded"
           />
