--- a/about.html
+++ b/about.html
@@ -40,15 +40,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="homepage"
+              <a class="nav-link" aria-current="page" href="/" title="homepage"
                 >Home</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/about.html" title="About me page"
                 >About me</a
               >
