--- a/about.html
+++ b/about.html
@@ -44,8 +44,11 @@
                 >Home</a
               >
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/about.html" title="About me page"
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About me page"
                 >About me</a
               >
             </li>
