--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <img
             src="/images/yoga.png"
             alt="yoga project"
-            class="img-fluid rounded"
+            class="img-fluid rounded project-image"
           />
         </div>
         <div class="col-md-6">
@@ -127,7 +127,7 @@
           <img
             src="/images/weather.png"
             alt="weather project"
-            class="img-fluid rounded"
+            class="img-fluid rounded project-image"
           />
         </div>
       </div>
@@ -136,7 +136,7 @@
           <img
             src="/images/yogurt.png"
             alt="yogurt project"
-            class="img-fluid rounded"
+            class="img-fluid rounded project-image"
           />
         </div>
         <div class="col-md-6">
